See #184. This wraps up the help pages (I think). If I missed any, let me know. Also, there is an issue with the route_create help page in IE (IE 8). I think it will affect all versions of IE, but you can test that if you want. You should notice a set of hideous scrollbars.

--- a/branches/184 - Help System/source/html/css/facebox.css
+++ b/branches/184 - Help System/source/html/css/facebox.css
@@ -42,7 +42,9 @@
   margin: 0;
 }
 #facebox .content{
-	
+	margin:5px;
+	max-height: 500px;
+	overflow: auto;
 }
 #facebox .footer {
   border-top: 1px solid #DDDDDD;
